# unofficial-HackerNews-MCP-CLI

./: .gitattributes  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
skills/hackernews/: SKILL.md
src/hn/: __init__.py  cli.py  client.py  models.py  server.py
tests/: test_client.py  test_server.py
